<resources>
    <string name="app_name">Packup</string>
    <string name="title_search">Search</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description and #categories</string>
    <string name="dialog_discard_box_title">Discard current box</string>
    <string name="dialog_discard_box_message">Are you sure you want to leave? Your current box will be discarded. You cannot undo this action.</string>
    <string name="dialog_empty_box_title">Empty box</string>
    <string name="dialog_empty_box_message">You cannot save an empty box. Add at least one item and try again.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="discard">Discard</string>
    <string name="dialog_delete_existing_box_title">Delete this box?</string>
    <string name="dialog_delete_existing_box_message">Are you sure you want to delete this box? You cannot undo this action.</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="menu_item_home">Home</string>
    <string name="box_number_placeholder">Box %d</string>
    <string name="char_limit">/ 250</string>
    <string name="char_count_default">0</string>
    <string name="number_of_items_format_string">%d items</string>
    <string name="tap_to_reveal">Tap to Reveal</string>
    <string name="tap_nfc_content_description">Tap NFC sticker to reveal box contents</string>
    <string name="nfc_read_instructions_p1">Tap your phone on an NFC tag</string>
    <string name="nfc_read_instructions_p2">to reveal that box\'s contents</string>
    <string name="cancel">Cancel</string>
    <string name="nfc_tag">NFC Tag</string>
    <string name="nfc">Scan NFC</string>
    <string name="add">New Box</string>
    <string name="unpack">Unpack</string>
    <string name="action_mode_title">%d %s</string>
    <string name="permanent_delete">Permanently delete</string>
    <string name="dialog_bulk_delete_title">Permanently delete boxes</string>
    <string name="dialog_bulk_delete_message">Are you sure you want to permanently delete these boxes? You cannot undo this action.</string>
    <string name="boxes_query_hint">Search boxes</string>
    <string name="items_query_hint">Search items</string>
    <string name="dialog_unpack_multiple_title">Unpack items?</string>
    <string name="dialog_unpack_multiple_message">Unpacking these items will remove them from this list. You can still view them in the on the unpacked items screen.</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="dialog_nfc_tag_already_registered_title">Already registered</string>
    <string name="dialog_nfc_tag_already_registered_message">There is already a tag registered to this box. Are you sure you want to register another tag?</string>
    <string name="register_a_tag">Register a Tag</string>
    <string name="nfc_write_instructions">to register it with this box</string>
    <string name="tag_success_message">Tag successfully written!</string>
    <string name="empty_list_text">Boxes you create will show up here</string>
    <string name="empty_items_text">Items you pack will show up here</string>
    <string name="menu_item_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="create">Create</string>
    <string name="empty_photos_text">Your packing list will show up here</string>
    <string name="required">Required</string>
    <string name="toolbar_save">Save</string>
    <string name="clear_items">Clear items</string>
    <string name="undo">Undo</string>
    <string name="pack_box">Pack Box</string>
    <string name="description_instructions">Add a space after your hashtag to convert it to a category tag.</string>
    <string name="filter_dialog_title">Filter…</string>
    <string name="categories">Categories</string>
    <string name="filtered_results_disclaimer">Showing filtered results…</string>
    <string name="clear">clear</string>
    <string name="filters_cleared">Filters cleared</string>
    <string name="apply">Apply</string>
    <string name="showing_all">Showing all</string>
    <string name="no_description">No description</string>
    <string name="hint_item_name">Item name</string>
    <string name="estimate_value_hint">Estimated value</string>
    <string name="view_box">View box</string>
    <string name="dialog_discard_changes_title">Discard changes</string>
    <string name="dialog_discard_changes_message">You may have made changes to this box. Are you sure you want to leave without saving?</string>
    <string name="leave">Leave</string>
    <string name="usd_symbol">$</string>
    <string name="estimated_value_format_string">$%.2f</string>
    <string name="one_item">1 item</string>
    <string name="box_name_transition">box name</string>
    <string name="box_number_transition">box number transition</string>
    <string name="box">Box</string>
    <string name="box_description_transition">box description transition</string>
    <string name="add_or_edit_button_transition_name">add or edit button transition name</string>
    <string name="categories_or_delete_button_transition_name">categories or delete button transition name</string>
    <string name="feedback_setting_title">Send feedback</string>
    <string name="feedback_setting_message">Contact the developer with bugs or suggestions</string>
    <string name="feedback_setting_mail_subject">Re: Packup Feedback</string>
    <string name="icons_attribution_message">Icons made by Nikita Golubev from flaticon.com</string>
    <string name="icons_attribution_url">https://www.flaticon.com/authors/nikita-golubev</string>
    <string name="camera_instructions">Press back to continue editing your box</string>
    <string name="empty_search_text">Couldn\'t find any boxes to match that search</string>
    <string name="empty_search_items_text">Couldn\'t find any items to match that search</string>
    <string name="content_description_settings_find_icon">inspection free icon</string>
    <string name="content_description_settings_warehouse_icon">Warehouse free icon</string>
    <string name="content_description_settings_open_box_icon">Open box free icon</string>
    <string name="content_description_settings_fragile_icon">Fragile free icon</string>
    <string name="content_description_bug_icon">Bug icon</string>
    <string name="content_description_settings_coat_stand_icon">Coat stand free icon</string>
    <string name="plus_4">+ 4</string>
    <string name="icons_attribution_title">View icons featured in this app</string>
    <string name="plus_3">+ 3</string>
    <string name="about_settings_title">About</string>
    <string name="system_bars_settings_title">System bars</string>
    <string name="window_settings_title">Window</string>
    <string name="system_settings_title">System</string>
    <string name="bars_settings_title">Bars</string>
    <string name="status_bar_color_setting_title">Colored status bar</string>
    <string name="hide_notch_setting_title">Hide display notch</string>
    <string name="hide_notch_setting_message">Color the status bar black to hide the notch</string>
    <string name="navigation_bar_setting_title">Color the navigation bar</string>
    <string name="navigation_bar_setting_message">Color the navigation bar with the primary color</string>
    <string name="camera_settings_title">Camera</string>
    <string name="shutter_vibration_setting_title">Shutter vibration</string>
    <string name="shutter_vibration_setting_message">Vibration feedback when taking pictures</string>
    <string name="feedback_mail_subject">Re: Packup Feedback</string>
    <string name="flaticon_attribution_gallery">https://www.flaticon.com/authors/nikita-golubev</string>
    <string name="settings_reset">Reset to default</string>
    <string name="hide_notch_key">hide_notch</string>
    <string name="settings_shared_preference">settings</string>
    <string name="shutter_vibration_key">shutter vibration key</string>


</resources>
