<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_close_dark"
            app:popupTheme="@style/AppTheme.PopUpOverlay"
            app:title="@string/settings"
            app:titleTextColor="@color/iconAndTextColor" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feedback_setting"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <ImageView
                android:id="@+id/feedback_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/content_description_bug_icon"
                android:src="@drawable/ic_bug"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/feedback_icon"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_setting_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/feedback_setting_message"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color_secondary_view_holder" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/icons_attribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feedback_setting">

            <LinearLayout
                android:id="@+id/icons_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/content_description_settings_warehouse_icon"
                        android:paddingStart="32dp"
                        android:paddingEnd="0dp"
                        android:src="@drawable/ic_warehouse" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/content_description_settings_open_box_icon"
                        android:paddingStart="0dp"
                        android:paddingEnd="32dp"
                        android:src="@drawable/ic_open_box" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/content_description_settings_find_icon"
                        android:paddingStart="32dp"
                        android:paddingEnd="0dp"
                        android:src="@drawable/ic_find" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/content_description_settings_coat_stand_icon"
                        android:src="@drawable/ic_coat_stand" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/content_description_settings_fragile_icon"
                        android:paddingStart="0dp"
                        android:paddingEnd="32dp"
                        android:src="@drawable/ic_contents" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/icons_attribution_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/icons_attribution_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_color_secondary_view_holder"
                app:layout_constraintEnd_toEndOf="@id/icons_preview"
                app:layout_constraintStart_toStartOf="@id/icons_preview"
                app:layout_constraintTop_toBottomOf="@id/icons_preview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>