<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="box"
            type="com.ashwinrao.packup.data.model.Box" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:elevation="50dp"
        android:fitsSystemWindows="true">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/snackbar_container"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="bottom">

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            android:fillViewport="true"
            android:isScrollContainer="true"
            android:overScrollMode="ifContentScrolls">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight">

                <TextView
                    android:id="@+id/box_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="32dp"
                    android:text="@{box.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:transitionName="@string/box_name_transition"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/delete_button"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintTop_toTopOf="@id/delete_button"
                    tools:text="Box Name" />

                <TextView
                    android:id="@+id/box_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:text="@{box.description}"
                    android:transitionName="@string/box_description_transition"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/top_row_view_holder"
                    app:layout_constraintEnd_toStartOf="@id/delete_button"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/box_name"
                    tools:text="Box description" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/box_description" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/divider"
                    app:layout_constraintEnd_toStartOf="@id/number_of_items"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chip_group" />

                <TextView
                    android:id="@+id/number_of_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/top_row_view_holder"
                    android:alpha="0.8"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintTop_toTopOf="@id/divider"
                    app:layout_constraintBottom_toBottomOf="@id/divider"
                    app:layout_constraintStart_toStartOf="@id/edit_button"
                    app:layout_constraintEnd_toEndOf="@id/edit_button"
                    tools:text="0 items" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:elevation="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@{null}"
                    app:navigationIcon="@drawable/ic_arrow_back"
                    app:popupTheme="@style/AppTheme.PopUpOverlay">

                    <LinearLayout
                        android:id="@+id/toolbar_title_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/toolbar_title_box_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/box"
                            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

                        <TextView
                            android:id="@+id/toolbar_title_box_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@{String.valueOf(box.number)}"
                            android:transitionName="@string/box_number_transition"
                            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                            tools:text="null" />
                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:overScrollMode="never"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <ImageView
                    android:id="@+id/empty_search_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_coat_stand"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/recycler_view"
                    app:layout_constraintVertical_bias="0.3"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/empty_search_placeholder_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/empty_search_items_text"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/top_row_view_holder"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/empty_search_placeholder" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/unselected_fab"
                    android:src="@drawable/ic_delete"
                    app:borderWidth="0dp"
                    app:elevation="0dp"
                    android:transitionName="@string/categories_or_delete_button_transition_name"
                    app:layout_constraintEnd_toStartOf="@id/edit_button"
                    app:layout_constraintTop_toBottomOf="@id/toolbar"
                    app:rippleColor="@android:color/white"
                    app:tint="@android:color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/colorAccent"
                    android:src="@drawable/ic_edit"
                    app:borderWidth="0dp"
                    app:elevation="0dp"
                    android:transitionName="@string/add_or_edit_button_transition_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar"
                    app:rippleColor="@android:color/white"
                    app:tint="@android:color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>